# sapl-rust

./: .gitignore  Cargo.toml  LICENSE.md  README.md  sonar-project.properties
.github/workflows/: audit.yml  ci-build.yml  rust.yml
antlr-parser/: Cargo.toml  README.md
embedded-pdp/: Cargo.toml  README.md
embedded-pdp/benches/: decide_once_benchmark.rs
embedded-pdp/benchmark_report_example/criterion/decide_once/base/: benchmark.json  estimates.json  sample.json
embedded-pdp/benchmark_report_example/criterion/decide_once/change/: estimates.json
embedded-pdp/benchmark_report_example/criterion/decide_once/new/: tukey.json
embedded-pdp/benchmark_report_example/criterion/decide_once/report/: index.html
embedded-pdp/src/: combining_algorithm.rs  decision_stream.rs  file_reader.rs  lib.rs  pdp_config.rs  stream_decision.rs
embedded-pdp/src/combining_algorithm/: deny_unless_permit_stream.rs  permit_unless_deny_stream.rs
file-reader/: Cargo.toml
file-reader/policies/: pdp.json
file-reader/src/: pdp_config.rs
pdp-server/: Cargo.toml  README.md
pdp-server/policies/: pdp.json  simpsons.sapl
pdp-server/tls/: cert.pem
pest-parser/: Cargo.toml  README.md
pest-parser/grammar/: sapl.pest
pest-parser/src/: advice.rs  ast.rs  authorization_subscription.rs  basic_identifier_expression.rs  boolean_stream.rs  combine_expr.rs  decision.rs  delay.rs  evaluate.rs  expr.rs  functions.rs  import.rs  lib.rs  main.rs  obligation.rs  policy.rs  schema.rs  simplify.rs  stream_sapl.rs  transformation.rs  val.rs  where_statement.rs
pest-parser/src/evaluate/: basic_identifier.rs  div.rs  eager_and.rs  eager_or.rs  eq.rs  ge.rs  le.rs  modulo.rs  mul.rs
pest-parser/src/functions/: local_time_stream.rs  temporal_function_library.rs
pest-parser/src/sapl_document/: policy.rs  policy_set.rs
pest-parser/src/simplify/: eager_and.rs  eager_or.rs
pest-parser/src/stream_sapl/: eval_add.rs  eval_and.rs  eval_eq.rs  eval_ge.rs  eval_le.rs  eval_sub.rs  once.rs
pest-parser/tests/: test.rs
remote-pdp/: Cargo.toml  Rocket.toml
remote-pdp/policies/: dummy.sapl
remote-pdp/src/: main.rs
research/antlr-parser/: Cargo.toml
research/antlr-parser/grammar/: SAPL.g4
research/antlr-parser/src/: gen.rs  lib.rs
research/embedded-pdp-demo/: Cargo.toml  README.md
research/embedded-pdp-demo/src/: main.rs
research/file-reader/: Cargo.toml  README.md
research/file-reader/src/: main.rs  pdp_config.rs
research/pest-parse-demo/: Cargo.toml  README.md
research/pest-parse-demo/src/: main.rs
research/tokio-stream-demo/: Cargo.toml  README.md
research/tokio-stream-demo/src/: add_expr.rs  boolean_stream.rs  boolean_stream_new.rs  combine.rs  combine_eager.rs  combine_lazy.rs  constant_bool_expr.rs  constant_integer_expr.rs  delay.rs  equal_expr.rs  evaluate_expr.rs  expr.rs  integer_stream.rs  lib.rs  main.rs  time_sec_interval.rs
sapl-core/: Cargo.toml  README.md
sapl-core/grammar/: sapl.pest
sapl-core/src/: advice.rs  ast.rs  authorization_decision.rs  authorization_subscription.rs  basic_identifier_expression.rs  boolean_stream.rs  combine_expr.rs  decision.rs  delay.rs  evaluate.rs  import.rs  lib.rs  main.rs  pip.rs  sapl_document.rs  schema.rs  stream_sapl.rs  transformation.rs  val.rs  where_statement.rs
sapl-core/src/evaluate/: add.rs  array.rs  array_slicing_step.rs  attribute_union_step.rs  basic_function.rs  basic_identifier.rs  basic_identifier_expression.rs  div.rs  eager_and.rs  eager_or.rs  eq.rs  expression_step.rs  ge.rs  ge_eq.rs  id.rs  index_step.rs  index_union_step.rs  key_step.rs  le.rs  le_eq.rs  modulo.rs  mul.rs  non_eq.rs  recursive_index_step.rs  recursive_key_step.rs  sapl_pair.rs  sapl_pairs.rs  sub.rs  variable_assignment.rs  wildcard_step.rs  xor.rs
sapl-core/src/functions/: temporal_function_library.rs
sapl-core/src/pip/: time.rs
sapl-core/src/pip/time/: time_policy_information_point.rs
sapl-core/src/sapl_document/: combining_algorithm.rs  policy.rs  policy_set.rs
sapl-core/src/sapl_document/combining_algorithm/: deny_overrides.rs  deny_unless_permit_stream.rs  first_applicable.rs  only_one_applicable.rs  permit_overrides.rs  permit_unless_deny_stream.rs
sapl-core/src/simplify/: add.rs  eager_and.rs  eager_or.rs
sapl-core/src/stream_sapl/: decision_combine_stream.rs  eval_basic_function.rs  eval_eq.rs  eval_ge.rs  eval_lazy_and.rs  eval_lazy_or.rs  eval_op.rs  eval_seconds_of.rs  once.rs  value_stream.rs
sapl-core/tests/: policy_evaluation.rs  test.rs
sapl-core/tests/policy_files/: selection_steps.sapl
sapl-server-rs/: Cargo.toml  README.md  Rocket.toml
sapl-server-rs/policies/: dummy.sapl  dummy2.sapl  simpsons.sapl
sapl-server-rs/src/: main.rs
sapl-server-rs/tls/: key.pem  keystore.p12
tokio-stream/: Cargo.toml
tokio-stream-demo/: Cargo.toml  README.md
tokio-stream-demo/src/: boolean_stream.rs  combine_eager.rs  integer_stream.rs  lib.rs  once.rs  stream_sapl.rs  time_sec_interval.rs  val.rs
tokio-stream-demo/src/stream_sapl/: eval_add.rs  eval_and.rs  eval_eq.rs  eval_ge.rs
tokio-stream/src/: boolean_stream.rs  combine_eager.rs  combine_lazy.rs  delay.rs  main.rs  reduce.rs
