#    Copyright 2025 Stefan Weng
#
#    Licensed under the Apache License, Version 2.0 (the "License"); you may not
#    use this file except in compliance with the License. You may obtain a copy
#    of the License at
#
#        http://www.apache.org/licenses/LICENSE-2.0
#
#    Unless required by applicable law or agreed to in writing, software
#    distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
#    WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
#    License for the specific language governing permissions and limitations
#    under the License.

[package]
name = "embedded-pdp"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = "0.3.31"
notify = "8.0.0"
sapl-core = { version = "0.1.0", path = "../sapl-core" }
pin-project-lite = "0.2.15"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
