#    Copyright 2025 Stefan Weng
#
#    Licensed under the Apache License, Version 2.0 (the "License"); you may not
#    use this file except in compliance with the License. You may obtain a copy
#    of the License at
#
#        http://www.apache.org/licenses/LICENSE-2.0
#
#    Unless required by applicable law or agreed to in writing, software
#    distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
#    WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
#    License for the specific language governing permissions and limitations
#    under the License.

[package]
name = "embedded-pdp"
description = "Embedded-pdp is an easy-to-use Streaming Attribute Policy Language (SAPL) Policy Decision Point (PDP) in any Rust application"
version = "0.1.0"
edition = "2024"
authors = ["Stefan Weng <stefwe@mailbox.org>"]
homepage = "https://sapl.io/"
repository = "https://github.com/heutelbeck/sapl-rust"
documentation = "https://sapl.io/documentation"
keywords = ["sapl", "abac", "asbac", "XACML", "pdp"]
categories = ["security"]
license = "Apache-2.0"
readme = "README.md"
rust-version = "1.88"

[dependencies]
futures = "0.3.31"
notify = "8.0.0"
sapl-core = { version = "0.1.0", path = "../sapl-core" }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
log = "0.4.27"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "decide_once_benchmark"
harness = false
