#    Copyright 2025 Stefan Weng
#
#    Licensed under the Apache License, Version 2.0 (the "License"); you may not
#    use this file except in compliance with the License. You may obtain a copy
#    of the License at
#
#        http://www.apache.org/licenses/LICENSE-2.0
#
#    Unless required by applicable law or agreed to in writing, software
#    distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
#    WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
#    License for the specific language governing permissions and limitations
#    under the License.

[package]
name = "sapl-core"
description = "SAPL-Core is a rust implementation of the powerful sapl policy language and engine to implement Attribute-based access control (ABAC)"
version = "0.1.0"
edition = "2024"
authors = ["Stefan Weng <stefwe@mailbox.org>"]
homepage = "https://sapl.io/"
repository = "https://github.com/FTKeV/sapl-rust"
documentation = "https://sapl.io/documentation"
keywords = ["sapl", "abac", "asbac", "XACML"]
categories = ["security"]
license = "Apache-2.0"
readme = "README.md"
rust-version = "1.88"

[dependencies]
lazy_static = "1.5.0"
pest = "2.7.13"
pest_derive = "2.7.13"
serde_json = { version = "1.0.140", features = ["preserve_order"] }
tokio-stream = "0.1.16"
async-stream = "0.3.6"
futures = "0.3.31"
pin-project-lite = "0.2.15"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1", features = ["full", "test-util", "macros"] }
chrono = "0.4.41"
rust_decimal = { version = "1.37.2", features = ["macros"] }
log = "0.4.27"

# Dev dependencies are used exclusively when running tests
# They do not get included in the final application binary!
[dev-dependencies]
rstest = "0.25.0"
