#    Copyright 2025 Stefan Weng
#
#    Licensed under the Apache License, Version 2.0 (the "License"); you may not
#    use this file except in compliance with the License. You may obtain a copy
#    of the License at
#
#        http://www.apache.org/licenses/LICENSE-2.0
#
#    Unless required by applicable law or agreed to in writing, software
#    distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
#    WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
#    License for the specific language governing permissions and limitations
#    under the License.

[package]
name = "sapl-core"
description = "SAPL-Core is a rust implementation of the powerful sapl policy language and engine to implement Attribute-based access control (ABAC)"
version = "0.1.0"
edition = "2024"
authors = ["Stefan Weng <stefwe@mailbox.org>"]
homepage = "https://sapl.io/"
repository = "https://github.com/heutelbeck/sapl-rust"
documentation = "https://sapl.io/documentation"
keywords = ["sapl", "abac", "asbac", "XACML"]
categories = ["security"]
license = "Apache-2.0"
readme = "README.md"
rust-version = "1.88"

[dependencies]
lazy_static.workspace = true
pest.workspace = true
pest_derive.workspace = true
serde_json = { workspace = true, features = ["preserve_order"] }
tokio-stream.workspace = true
futures.workspace = true
pin-project-lite.workspace = true
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full", "test-util", "macros"] }
chrono.workspace = true
rust_decimal = { workspace = true, features = ["macros"] }
log.workspace = true

# Dev dependencies are used exclusively when running tests
# They do not get included in the final application binary!
[dev-dependencies]
rstest.workspace = true
