#    Copyright 2025 Stefan Weng
#
#    Licensed under the Apache License, Version 2.0 (the "License"); you may not
#    use this file except in compliance with the License. You may obtain a copy
#    of the License at
#
#        http://www.apache.org/licenses/LICENSE-2.0
#
#    Unless required by applicable law or agreed to in writing, software
#    distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
#    WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
#    License for the specific language governing permissions and limitations
#    under the License.

[package]
name = "sapl-server-rs"
description = "sapl-server-rs is an lightweight SAPL-based Policy Decision Point (PDP) Server for centrally administrating policies providing request-response and subscription-based authorization as a service through a simple REST style API."
version = "0.1.0"
edition = "2024"
authors = ["Stefan Weng <stefwe@mailbox.org>"]
homepage = "https://sapl.io/"
repository = "https://github.com/FTKeV/sapl-rust"
documentation = "https://sapl.io/documentation"
keywords = ["sapl", "abac", "asbac", "XACML", "pdp"]
categories = ["security"]
license = "Apache-2.0"
readme = "README.md"
rust-version = "1.88"

[dependencies]
embedded-pdp = { version = "0.1.0", path = "../embedded-pdp" }
rocket = { version = "0.5.1", features = ["json", "tls"] }
serde = "1.0.219"
