#    Copyright 2025 Stefan Weng
#
#    Licensed under the Apache License, Version 2.0 (the "License"); you may not
#    use this file except in compliance with the License. You may obtain a copy
#    of the License at
#
#        http://www.apache.org/licenses/LICENSE-2.0
#
#    Unless required by applicable law or agreed to in writing, software
#    distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
#    WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
#    License for the specific language governing permissions and limitations
#    under the License.

[package]
name = "embedded-pdp-demo"
version = "0.1.0"
edition = "2024"

[dependencies]
embedded-pdp = { version = "0.1.0", path = "../../embedded-pdp" }
futures = "0.3.31"
sapl-core = { version = "0.1.0", path = "../../sapl-core" }
tokio = { version = "1.40.0", features = ["rt-multi-thread", "macros"] }
